--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/frame/left.jsp=UTF-8
+encoding//WebContent/frame/top.jsp=UTF-8
 encoding/<project>=UTF-8
